# GrabVideo

./: .gitignore  TAURI_README.md  docker-compose.yml  package-lock.json  package.json
public/: index.html
scripts/: prepare-tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/server/: constants.ts
